--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
