--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=5.6",
-    "ext-json": "*"
+    "php": ">=5.5",
+    "ext-json": "*",
+    "ext-dom": "*"
   },
   "autoload": {
     "psr-4": {
